k8s/dev1/frontend/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: pythonicrahul/basic-notes-app-frontend:dev1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      restartPolicy: Always
